--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,7 +15,7 @@ builds:
   - 
     main: main.go
     env:
-#      - CGO_ENABLED=0
+      - CGO_ENABLED=1
     goos:
       - linux
       - windows
